NXP-24757 NXP-24830: Cleanup / Format