@@ -1,5 +1,5 @@
 /*
- * (C) Copyright 2006-2017 Nuxeo (http://nuxeo.com/) and others.
+ * (C) Copyright 2006-2018 Nuxeo (http://nuxeo.com/) and others.
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -132,7 +132,7 @@ public class ContentTemplateServiceImpl extends DefaultComponent implements Cont
     protected ContentFactory getFactoryInstance(FactoryBindingDescriptor descriptor) {
         ContentFactoryDescriptor factoryDescriptor = factories.get(descriptor.getFactoryName());
         try {
-            ContentFactory factory = factoryDescriptor.getClassName().newInstance();
+            ContentFactory factory = factoryDescriptor.getClassName().getConstructor().newInstance();
             boolean factoryOK = factory.initFactory(descriptor.getOptions(), descriptor.getRootAcl(),
                     descriptor.getTemplate());
             if (!factoryOK) {
@@ -147,6 +147,7 @@ public class ContentTemplateServiceImpl extends DefaultComponent implements Cont
         }
     }
 
+    @Override
     public void executeFactoryForType(DocumentModel createdDocument) {
         ContentFactory factory = getFactoryForType(createdDocument.getType());
         if (factory != null) {
